--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-# Single-Serving-Page
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="utf-8">
+  <!-- mobile friendly -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
+  <title>Brown Sugar Cookie Recipe</title>
+  <meta name="author" content="Kayla Jordan">
+</head>
+<body>
