--- a/index.html
+++ b/index.html
@@ -9,3 +9,24 @@
   <meta name="author" content="Kayla Jordan">
 </head>
 <body>
+
+  <h1>My Portfolio</h1>
+  
+  <nav>
+    <ul class="topnav">
+      <li>
+        <li>Paintings</li>
+        <li>Drawings</li>
+        <li>Photos</li>
+      </li>
+    </ul>
+  
+  <h2>Paintings</h2>
+  
+  <h3>Drawings</h3>
+  
+  <h4>Photos</h4>
+  
+  </body>
+</html>
+  
