--- a/index.html
+++ b/index.html
@@ -12,19 +12,26 @@
 
   <h1>My Portfolio</h1>
   
-  <nav>
-    <ul class="topnav">
-      <li>Paintings</li>
-      <li>Drawings</li>
-      <li>Photos</li>
-    </ul>
+<nav>
+  <ul>
+    <li><a href="#paintings">Paintings</a></li>
+    <li><a href="#drawings">Drawings</a></li>
+    <li><a href="#photos">Photos</a></li>
+  </ul>
+</nav>
+
+  <section id="paintings">
+
+ <h2>Paintings</h2>
+ 
+ <section id="drawings">
+
+ <h2>Drawings</h2>
   
-  <h2>Paintings</h2>
+ <section id="drawings">
+
+ <h2>Photos</h2>
   
-  <h2>Drawings</h2>
-  
-  <h2>Photos</h2>
-  
-  </body>
+</body>
 </html>
   
