--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 
  <h2>Paintings</h2>
  
+        <img src="https://i.imgur.com/GmHyRyc.jpg" width="300" height="341" alt="drawing" class="right">
+        <img src="https://i.imgur.com/tlGbYxc.jpg" width="300" height="341" alt="drawing" class="left">
+        <img src="https://i.imgur.com/cZFAosy.jpg?1" width="300" height="341" alt="drawing" class="right">
+        <img src="https://i.imgur.com/c7wkUn6.jpg" width="300" height="341" alt="drawing" class="left">
+   
+
+
+
  <section id="drawings">
 
  <h2>Drawings</h2>
