--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="https://i.imgur.com/cZFAosy.jpg?1" width="400" height="341" alt="drawing" class="right">
         <img src="https://i.imgur.com/c7wkUn6.jpg" width="400" height="341" alt="drawing" class="left">
    
- <section id="drawings">
+ <section id="photos">
 
  <h2>Photos</h2>
   
