--- a/index.html
+++ b/index.html
@@ -34,17 +34,15 @@
         <img src="https://i.imgur.com/c7wkUn6.jpg" width="400" height="341" alt="drawing" class="left">
    
  <section id="photos">
-   
-        <img src="https://i.imgur.com/vWxSsAF.jpg" width="400" height="341" alt="drawing" class="left">
-        <img src="https://i.imgur.com/aWNjYJf.jpg" width="400" height="341" alt="drawing" class="left">
-        <img src="https://i.imgur.com/nD9T8KK.jpg" width="400" height="341" alt="drawing" class="left">
-        <img src="https://i.imgur.com/fUMM7AN.jpg"400" height="341" alt="drawing" class="left">
-        <img src="https://i.imgur.com/HcPywQu.jpg" width="400" height="341" alt="drawing" class="left">
-
-
 
  <h2>Photos</h2>
-  
+   
+   <img src="https://i.imgur.com/vWxSsAF.jpg" width="400" height="341" alt="drawing" class="right">
+    <img src="https://i.imgur.com/aWNjYJf.jpg" width="400" height="341" alt="drawing" class="left">
+    <img src="https://i.imgur.com/nD9T8KK.jpg" width="400" height="341" alt="drawing" class="right">
+    <img src="https://i.imgur.com/fUMM7AN.jpg"400" height="341" alt="drawing" class="left">
+    <img src="https://i.imgur.com/HcPywQu.jpg" width="400" height="341" alt="drawing" class="right">
+
 </body>
 </html>
   
