--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
  <h2>Paintings</h2>
  
  <section id="drawings">
-
+</section>
  <h2>Drawings</h2>
   
         <img src="https://i.imgur.com/GmHyRyc.jpg" width="400" height="341" alt="drawing" class="right">
         <img src="https://i.imgur.com/tlGbYxc.jpg" width="400" height="341" alt="drawing" class="left">
         <img src="https://i.imgur.com/cZFAosy.jpg?1" width="400" height="341" alt="drawing" class="right">
         <img src="https://i.imgur.com/c7wkUn6.jpg" width="400" height="341" alt="drawing" class="left">
-   
- <section id="photos">
+   </section>
+
+    <section id="photos">
 
  <h2>Photos</h2>
    
    <img src="https://i.imgur.com/vWxSsAF.jpg" width="400" height="341" alt="drawing" class="right">
     <img src="https://i.imgur.com/aWNjYJf.jpg" width="400" height="341" alt="drawing" class="left">
     <img src="https://i.imgur.com/nD9T8KK.jpg" width="400" height="341" alt="drawing" class="right">
-    <img src="https://i.imgur.com/fUMM7AN.jpg"400" height="341" alt="drawing" class="left">
+    <img src="https://i.imgur.com/fUMM7AN.jpg" width=300" height="400" alt="drawing" class="left">
     <img src="https://i.imgur.com/HcPywQu.jpg" width="400" height="341" alt="drawing" class="right">
-
-</body>
+     </section>
 </html>
   
