--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>My Portfolio</h1>
   
 <nav>
-  <ul>
+  <ul class="topnav">
     <li><a href="#paintings">Paintings</a></li>
     <li><a href="#drawings">Drawings</a></li>
     <li><a href="#photos">Photos</a></li>
