--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
   <section id="drawings">
 
  <h2>Drawings</h2>
-  
-        <img src="https://i.imgur.com/GmHyRyc.jpg" width="400" height="341" alt="drawing" class="right">
+      
+    <details class="figure">
+  <summary>
+    <img src="https://i.imgur.com/GmHyRyc.jpg" width="400" height="341" alt="drawing" class="right">
+  </summary>
+  <div class="caption">
+    <p>Taken in 2020</p>
+  </div>
+</details>
+    
         <img src="https://i.imgur.com/tlGbYxc.jpg" width="400" height="341" alt="drawing" class="left">
         <img src="https://i.imgur.com/cZFAosy.jpg?1" width="400" height="341" alt="drawing" class="right">
         <img src="https://i.imgur.com/c7wkUn6.jpg" width="400" height="341" alt="drawing" class="left">
