--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                                                                                       
 <details class="figure">
   <summary>
-  <img src="https://i.imgur.com/fUMM7AN.jpg" width=300" height="400" alt="drawing" class="left">
+  <img src="https://i.imgur.com/fUMM7AN.jpg" "width=300" height="400" alt="drawing" class="left">
   </summary>
   <div class="caption">
   <p>Taken in 2019</p>
