--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <meta name="author" content="Kayla Jordan">
 </head>
 <body>
-
-  <h1>Work by Kayla Jordan</h1>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Girassol&display=swap" rel="stylesheet">
+<h1>Work by Kayla Jordan</h1>
   
 <nav>
   <ul class="topnav">
