--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
   <img src="https://i.imgur.com/GmHyRyc.jpg" width="400" height="341" alt="drawing" class="right">
   </summary>
   <div class="caption">
+    <p>Still Life Objects</p>
     <p>Created in 2020</p>
     <p>Material used: graphite pencil</p>
   </div>
@@ -115,6 +116,7 @@
   <img src="https://i.imgur.com/tlGbYxc.jpg" width="400" height="341" alt="drawing" class="left">
   </summary>
   <div class="caption">
+    <p>Folded Paper</p>
   <p>Created in 2020</p>
     <p>Material used: graphite pencil</p>
   </div>
@@ -125,6 +127,7 @@
   <img src="https://i.imgur.com/cZFAosy.jpg?1" width="400" height="341" alt="drawing" class="right">
   </summary>
   <div class="caption">
+    <p>Still Like Objects II</p>
   <p>Created in 2020</p>
     <p>Material used: graphite pencil</p>
   </div>
@@ -135,6 +138,7 @@
   <img src="https://i.imgur.com/c7wkUn6.jpg" width="400" height="341" alt="drawing" class="left">
   </summary>
   <div class="caption">
+    <p>Forrest</p>
   <p>Created in 2020</p>
     <p>Material used: sharpie marker<p/>
   </div>
@@ -151,6 +155,7 @@
   <img src="https://i.imgur.com/vWxSsAF.jpg" width="400" height="341" alt="drawing" class="right">
   </summary>
   <div class="caption">
+    <p>Glasses</p>
   <p>Taken in 2021</p>
   </div>
 </details>
@@ -160,6 +165,7 @@
   <img src="https://i.imgur.com/aWNjYJf.jpg" width="400" height="341" alt="drawing" class="left">
   </summary>
   <div class="caption">
+    <p>Rose</p>
   <p>Taken in 2021</p>
   </div>
 </details>
@@ -169,6 +175,7 @@
   <img src="https://i.imgur.com/nD9T8KK.jpg" width="400" height="341" alt="drawing" class="right">
   </summary>
   <div class="caption">
+    <p>Rose Under Flower Arch</p>
   <p>Taken in 2021</p>
   </div>
 </details>
@@ -178,6 +185,7 @@
   <img src="https://i.imgur.com/fUMM7AN.jpg" width="300" height="400" alt="drawing" class="left">
   </summary>
   <div class="caption">
+    <p>Boat at Dock</p>
   <p>Taken in 2019</p>
   </div>
 </details>
@@ -187,6 +195,7 @@
   <img src="https://i.imgur.com/HcPywQu.jpg" width="400" height="341" alt="drawing" class="right">
   </summary>
   <div class="caption">
+    <p>Happy Place</p>
   <p>Taken in 2019</p>
   </div>
 </details>
