--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <img src="https://i.imgur.com/45txas6.jpg" width="400" height="341" alt="drawing" class="left">
   </summary>
   <div class="caption">
-    <p>Title: Squash and Bananna</p>
+    <p>Squash and Bananna</p>
   <p>Created in 2019</p>
     <p>Material used: oil paint</p>
   </div>
