--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
   <details class="figure">
   <summary>
-  <img src="https://i.imgur.com/In0G1sb.jpg" width="400" height="341" alt="drawing" class="left">
+  <img src="https://i.imgur.com/SOEk3p6.jpg" width="400" height="341" alt="drawing" class="left">
   </summary>
   <div class="caption">
   <p>Rainbow</p>
