--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <details class="figure">
   <summary>
-  <img src="https://i.imgur.com/45txas6.jpg" width="400" height="341" alt="drawing" class="left">
+  <img src="images/squash-and-bananna" width="400" height="341" alt="Squash and Bananna" class="left">
   </summary>
   <div class="caption">
     <p>Squash and Bananna</p>
@@ -40,7 +40,7 @@
     
   <details class="figure">
   <summary>
-  <img src="https://i.imgur.com/SOEk3p6.jpg" width="2268" height="3024" alt="drawing" class="left">
+  <img src="https://i.imgur.com/SOEk3p6.jpg" width="960" height="720" alt="drawing" class="left">
   </summary>
   <div class="caption">
   <p>Rainbow</p>
