--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <div class="caption">
     <p>Forrest</p>
   <p>Created in 2020</p>
-    <p>Material used: sharpie marker<p/>
+    <p>Material used: sharpie marker</p>
   </div>
 </details>
     
